--- a/templates/kinsdb/site.html
+++ b/templates/kinsdb/site.html
@@ -19,7 +19,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4"> 규제사례 부지인자별 데이터 </h3>
+          <h3 class="mb-4"> 규제사례 데이터베이스 </h3>
 
         </div>
       </div>
@@ -58,7 +58,7 @@
                 <h6 class="fs-18 mb-2">IAEA</h6>
               </a>
               <p class="text-muted mb-4">국제 원자력 기구</p>
-              <a href="{% url 'database' company='UNIST' institution='IAEA' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='IAEA' %}" class="btn btn-primary">{{ counts.0|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
                 <h6 class="fs-18 mb-2">미국</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='미국' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='미국' %}" class="btn btn-primary">{{ counts.1|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
                 <h6 class="fs-18 mb-2">스웨덴</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='스웨덴' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='스웨덴' %}" class="btn btn-primary">{{ counts.2|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
                 <h6 class="fs-18 mb-2">핀란드</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='핀란드' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='핀란드' %}" class="btn btn-primary">{{ counts.3|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
                 <h6 class="fs-18 mb-2">프랑스</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='프랑스' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='프랑스' %}" class="btn btn-primary">{{ counts.4|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
                 <h6 class="fs-18 mb-2">독일</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='독일' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='독일' %}" class="btn btn-primary">{{ counts.5|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -142,7 +142,7 @@
                 <h6 class="fs-18 mb-2">캐나다</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='캐나다' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='캐나다' %}" class="btn btn-primary">{{ counts.6|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
                 <h6 class="fs-18 mb-2">일본</h6>
               </a>
               <p class="text-muted mb-4">해외 선도국</p>
-              <a href="{% url 'database' company='UNIST' institution='일본' %}" class="btn btn-primary">12개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='일본' %}" class="btn btn-primary">{{ counts.7|default:0 }}개의 문서</a>
             </div>
           </div>
         </div>
