--- a/templates/partials/brnc_card.html
+++ b/templates/partials/brnc_card.html
@@ -29,9 +29,13 @@
 
       <div class="col-lg-4">
         <div class="mt-2 mt-lg-0">
-
           {% for t in doc.tags.all %}
+          {% if field == 'tag' %}
+          <span class="badge {% if search == t.tag_content %}bg-soft-primary{% else %}bg-soft-muted{% endif %} fs-14 mt-1"><a onclick="searchTag('{{ t.tag_content }}')">#{{ t.tag_content }}</a></span>
+          {% else %}
           <span class="badge {% if tag == t.tag_content %}bg-soft-primary{% else %}bg-soft-muted{% endif %} fs-14 mt-1"><a onclick="searchTag('{{ t.tag_content }}')">#{{ t.tag_content }}</a></span>
+          {% endif %}
+
           {% endfor %}
         </div>
       </div>
