--- a/templates/kinsdb/UNIST_database.html
+++ b/templates/kinsdb/UNIST_database.html
@@ -168,7 +168,6 @@
                 <div class="filler-job-form">
                   <i class="uil uil-clipboard-notes"></i>
                   <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" aria-label="Default select example" onchange="document.getElementById('fieldFormControlInput').value=this.value">
-                    <option value="">분류</option>
                     <option value="title">제목</option>
                     <option value="key">태그</option>
                   </select>
@@ -356,6 +355,7 @@
 
 <!-- Job-list Init Js -->
 <script src="{% static 'js/data-filter.init.js' %}"></script>
+<script src="{% static 'js/data-filter-unist.init.js' %}"></script>
 
 <!-- Switcher Js -->
 <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
