--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -70,7 +70,7 @@
                 <h6 class="fs-18 mb-2">규제사례</h6>
               </a>
               <p class="text-muted mb-4">울산과학기술원</p>
-              <a href="{% url 'site' %}" class="btn btn-primary">부지인자별 문서</a>
+              <a href="{% url 'site' %}" class="btn btn-primary">국가별 문서</a>
             </div>
           </div>
         </div>
