--- a/templates/partials/brnc_card.html
+++ b/templates/partials/brnc_card.html
@@ -13,7 +13,7 @@
 
       <div class="col-lg-6">
         <div class="candidate-list-content mt-3 mt-lg-0">
-          <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' pk=doc.id %}" class="primary-link">{{ doc.title }}</a> </h5>
+          <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' pk=doc.id %}" class="primary-link">[{{ doc.document.serial_num }}] <span style="font-weight:400">{{ doc.title }}</span></a> </h5>
           <p class="text-muted mb-2"> {{ doc.writer.company }} | {{ doc.writer.dept }} </p>
           <ul class="list-inline mb-0 text-muted">
             <li class="list-inline-item">
