--- a/templates/kinsdb/docs-detail.html
+++ b/templates/kinsdb/docs-detail.html
@@ -119,7 +119,7 @@
             <ul class="list-unstyled mb-0">
               <!-- TAGS -->
               {% for tag in doc.tags.all %}
-              <span class="badge bg-soft-muted fs-14 mt-1">#{{ tag.tag_content }}</span>
+              <span class="badge bg-soft-muted fs-14 mt-1" onclick=location.href="{% url 'database' company='BRNC' institution='미국' _tag=tag.tag_content %}">#{{ tag.tag_content }}</span>
               {% endfor %}
             </ul>
           </div>
