--- a/templates/kinsdb/UNIST/kbs-3.html
+++ b/templates/kinsdb/UNIST/kbs-3.html
@@ -14,7 +14,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4"> 국가별 Safety Case </h3>
+          <h3 class="mb-4"> KBS-3 구성요소별 조건 </h3>
 
         </div>
       </div>
