--- a/templates/kinsdb/UNIST/component-list.html
+++ b/templates/kinsdb/UNIST/component-list.html
@@ -38,52 +38,131 @@
 
 <section>
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <div id="tabs">
-          <div class="card-body p-4">
-            <div>
-              <h6 class="card-title">검토 진행 사항</h6>
-              <p class="text-muted">검토 진행 사항에 관한 내용 또는 페이지</p>
+    <div class="row g-2 mt-3 mb-3">
 
-              <ul class="nav nav-tabs" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" data-bs-toggle="tab" href="#hometab" role="tab">
-                    <span>KAERI</span>
-                  </a>
+      <div class="col-lg-3 col-md-6">
+        <div class="filler-job-form">
+          <i class="uil uil-clipboard-notes"></i>
+          <select class="form-select" data-trigger name="choices-single-cate" id="choices-single-cate" aria-label="Default select example" onchange="changeCategory()">
+            <option value="">분류</option>
+            <option value="모암">모암</option>
+            <option value="산업시설">산업시설</option>
+            <option value="사회적 관점">사회적 관점</option>
+            <option value="사회적 관념">사회적 관념</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <div class="filler-job-form">
+          <i class="uil uil-search"></i>
+
+          <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" name="search" value="" onfocus="this.value=''" placeholder="검색어 입력" onblur="this.value=this.value.trim();">
+          <input type="hidden" class="form-control filter-job-input-box" id="keyInput" name="key" value="{{ key }} " onfocus="this.value=''" onblur="this.value=this.value.trim();">
+
+          <input type="hidden" id="fieldFormControlInput" name="field" value="title" onfocus="this.value=''">
+        </div>
+      </div>
+
+      <div class="col-lg-3">
+        <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i> Filter</button>
+        <a href="{% url 'database' company='BRNC' institution='미국' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
+      </div>
+
+
+      <div class="row">
+
+            <!-- 토글 탭 버튼 -->
+            <div class="col-lg-4 mt-4">
+              <ul class="job-list-menu nav nav-pills nav-justified flex-column flex-sm-row" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation" style="width:100%">
+                  <button class="nav-link active" id="recent-jobs-tab" data-bs-toggle="pill" data-bs-target="#recent-jobs" type="button" role="tab" aria-controls="recent-jobs" aria-selected="true">안전기능</button>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" data-bs-toggle="tab" href="#profile" role="tab">
-                    <span>KORAD</span>
-                  </a>
-                </li>
+                <li class="nav-item" role="presentation" style="width:100%">
+                  <button class="nav-link" id="featured-jobs-tab" data-bs-toggle="pill" data-bs-target="#featured-jobs" type="button" role="tab" aria-controls="featured-jobs" aria-selected="false">기술설계</button>
               </ul>
-              <div class="tab-content p-3 border border-top-0 rounded-bottom text-muted">
-                <div class="tab-pane active" id="hometab" role="tabpanel">
-                  <p class="mb-0">
-                    KAERI 내용
-                  </p>
-                  <div style="height:600px; border: 1px solid black;"></div>
+            </div>
 
-                </div>
-                <div class="tab-pane" id="profile" role="tabpanel">
-                  <p class="mb-0">
-                    KOLAD 내용
-                  </p>
-                  <div style="height:600px; border: 1px solid black;"></div>
 
+
+            <div class="col-lg-12">
+              <div class="tab-content p-3">
+                <div class="tab-pane active" id="recent-jobs" role="tabpanel">
+                  <!-- 요건 리스트 -->
+                  <div class="col-lg-12">
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">부식 저항성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+
+
+                <div class="tab-pane" id="featured-jobs" role="tabpanel">
+                  <!-- 요건 리스트 -->
+                  <div class="col-lg-12">
+                    <div class="candidate-list-box card mt-4">
+                      <div class="card-body p-4">
+                        <div class="row align-items-center">
+                          <div class="col-auto">
+                            <div class="candidate-list-images">
+                              <a href="javascript:void(0)"><img src="{% static 'images/profile.jpg' %}" alt="" class="avatar-md img-thumbnail rounded-circle"></a>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                          <div class="col-lg-6">
+                            <div class="candidate-list-content mt-3 mt-lg-0">
+                              <h5 class="fs-19 mb-1"><a href="#" class="primary-link">캐니스터 재료 특성<span style="font-weight:400"></span></a> </h5>
+                              <p class="text-muted mb-2"> </p>
+                              <ul class="list-inline mb-0 text-muted">
+                                <li class="list-inline-item">
+                                  <i class="mdi mdi-map-marker"></i> 등록일자:
+                                </li>
+                                <li class="list-inline-item">
+                                  <i class="uil uil-wallet"></i> 조회수:
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!--end col-->
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
               </div>
             </div>
-            <!--end basic-tabs-->
 
-          </div>
-          <!--end card-body-->
-        </div>
-        <!--end tabs-->
       </div>
     </div>
-  </div>
 </section>
 
 
@@ -96,6 +175,7 @@
 
 <!-- Choice Js -->
 <script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
+<script src="{% static 'js/data-filter-unist.init.js' %}"></script>
 
 <!-- Candidate Js -->
 <script src="{% static 'js/pages/candidate.init.js' %}"></script>
