--- a/templates/kinsdb/unist.html
+++ b/templates/kinsdb/unist.html
@@ -65,7 +65,7 @@
                 <h6 class="fs-18 mb-2">개발단계 및 Safety Case 별<br> 규제사례</h6>
               </a>
 
-              <a href="{% url 'safety' %}" class="btn btn-primary">국가별 문서</a>
+              <a href="{% url 'institution' %}" class="btn btn-primary">국가별 문서</a>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
               <a href="#" class="primary-link">
                 <h6 class="fs-18 mb-2">KBS-3 구성요소별 요건</h6>
               </a>
-              <a href="{% url 'kbs-3' %}" class="btn btn-primary">국가별 문서</a>
+              <a href="{% url 'site' %}" class="btn btn-primary">국가별 문서</a>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
               <a href="#" class="primary-link">
                 <h6 class="fs-18 mb-2">부지선정인자</h6>
               </a>
-              <a href="{% url 'siting' country='스웨덴' %}" class="btn btn-primary">국가별 문서</a>
+              <a href="{% url 'siting' %}" class="btn btn-primary">국가별 문서</a>
             </div>
           </div>
         </div>
