--- a/templates/partials/rnd_base.html
+++ b/templates/partials/rnd_base.html
@@ -42,6 +42,10 @@
       display: inline;
       margin-left: 10px;
     }
+
+    .page-content {
+      min-height: 100vh;
+    }
   </style>
 </head>
 
