--- a/templates/kinsdb/UNIST/component-detail.html
+++ b/templates/kinsdb/UNIST/component-detail.html
@@ -22,7 +22,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">지하수 조성</h3>
+          <h3 class="mb-4">{{ title }}</h3>
           <div class="page-next">
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
@@ -56,47 +56,18 @@
 <section class="section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <ul class="job-list-menu nav nav-pills nav-justified flex-column flex-sm-row mb-4" id="pills-tab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="recent-jobs-tab" data-bs-toggle="pill" data-bs-target="#recent-jobs" type="button" role="tab" aria-controls="recent-jobs" aria-selected="true">산소</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="featured-jobs-tab" data-bs-toggle="pill" data-bs-target="#featured-jobs" type="button" role="tab" aria-controls="featured-jobs" aria-selected="false">염분</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="freelancer-tab" data-bs-toggle="pill" data-bs-target="#freelancer" type="button" role="tab" aria-controls="freelancer" aria-selected="false">기타 화학적 성질</button>
-          </li>
 
-        </ul>
-      </div>
 
       <div class="col-lg-12">
-        <div class="card candidate-details ms-lg-0 mt-4 mt-lg-0">
+
+        <div class="card candidate-details ms-lg-0 mt-4 mb-4">
           <div class="card-body p-4 candidate-personal-detail">
 
-            <div class="candidate-education-detailspt-3">
-
+            <div class="candidate-education-details">
               <div class="candidate-education-content">
-                <p class="text-muted">{{ doc.description }}</p>
-                <h6>요구사항</h6>
-                <ul>
-                  <li>지하수의 총 염도(TDS)는 저장소 수준에서 100g/l 미만이어야 한다.</li>
-                </ul>
-                <h6>선호사항</h6>
-                <ul>
-                  <li>(없음)</li>
-                </ul>
-                <h6>설명</h6>
-                <ul>
-                  <li>
-                    염도가 매우 높으면 완충액의 장기 기능이 손상될 수 있다.
-                  </li>
-                  <li>
-                    이에 비해 바닷물의 염도(TDS)는 35g/l라고 할 수 있다.
-                  </li>
-                </ul>
-
+                <span class="badge bg-soft-primary fs-14" onclick=location.href="#">#캐니스터</span>
+                <span class="badge bg-soft-primary fs-14" onclick=location.href="#">#부식 저항성</span>
+                <span class="badge bg-soft-primary fs-14" onclick=location.href="#">#구리용기</span>
               </div>
             </div>
             <!--end candidate-education-details-->
@@ -104,13 +75,50 @@
           </div>
           <!--end card-body-->
         </div>
-        <!--end card-->
+
+
+        <div class="card candidate-details ms-lg-0 mt-4 mb-4">
+          <div class="card-body p-4 candidate-personal-detail">
+
+            <div class="candidate-education-details">
+              <div class="candidate-education-content">
+                <p class="text-muted">{{ doc.description }}</p>
+                <h6>SR-Site</h6>
+                <p>캐니스터는 격납을 유지하고 처분장에서 발생할 것으로 예상되는 부식을 견뎌야 한다.</p>
+                <h6>Posiva</h6>
+                <p>캐니스터는 격납을 유지하고 처분장에서 발생할 것으로 예상되는 부식을 견뎌야 한다.</p>
+                <h6>안전기능</h6>
+                <p>부식 저항성</p>
+                <h6>성능목표</h6>
+                <p>구리의  > 0 </p>
+                <h6>검증 특성</h6>
+                <ul>
+                  <li>재료 특성</li>
+                  <li>재료 성분</li>
+                  <li>제원</li>
+                  <li>결함</li>
+                </ul>
+              </div>
+            </div>
+            <!--end candidate-education-details-->
+
+          </div>
+          <!--end card-body-->
+        </div>
+
+        <h4>
+          안전기능 및 성능목표의 근거
+        </h4>
+        <p>
+          캐니스터가 단단히 밀봉되어 있는 한, KBS-3-처분장은 겹납을 유지하며 방사선으로 인한 유해한 영향은 발생하지 않는다. 사용후핵연료의 방사능독성(radiotoxicity)과 관련하여 요구되는 격납을 유지하기 위해 내화학성이 요구된다.
+성능목표인 0보다 큰 구리 두께는 겹납을 유지하고 최소한 어떤 위치에서 두께가 0이 되지 않는 한 어떤 방사성핵종도 유출될 수 없도록 하는 구리 외부용기이기 때문에 설정된다.
+        </p>
 
         <div class="row">
           <div class="col-lg-10">
           </div>
           <div class="col-lg-2 mt-4">
-            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'siting' country='스웨덴' %}">목록</button>
+            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'component' cmp='모암' %}">목록</button>
           </div>
         </div>
       </div>
