--- a/templates/kinsdb/UNIST/siting.html
+++ b/templates/kinsdb/UNIST/siting.html
@@ -176,7 +176,7 @@
 
                   <div class="col-lg-6">
                     <div class="candidate-list-content mt-3 mt-lg-0">
-                      <h5 class="fs-19 mb-1"><a href="{% url 'sitings_details' %}" class="primary-link">지하수 조성<span style="font-weight:400"></span></a> </h5>
+                      <h5 class="fs-19 mb-1"><a href="{% url 'details' %}" class="primary-link">지하수 조성<span style="font-weight:400"></span></a> </h5>
                       <p class="text-muted mb-2"> </p>
                       <ul class="list-inline mb-0 text-muted">
                         <li class="list-inline-item">
